Fix history overflow

--- a/style.css
+++ b/style.css
@@ -115,8 +115,13 @@ body {
 }
 
 #history {
+    display: flex;
+    flex-direction: column-reverse;
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    scrollbar-width: thin;
     height: 1.2em;
     font-size: 1.2em;
     font-weight: bold;
